--- a/style.css
+++ b/style.css
@@ -98,3 +98,11 @@
     transform: rotateY(180deg);
     pointer-events: none;
   }
+
+  .memory-game-blocks .no-clicking{
+    pointer-events: none;
+  }
+  .face i{
+    font-size: 100px;
+    top: 50%;
+  }
